tests/models/enum/unnamed/f32/fail/default.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(default = 1)]
        f32
    ),
}
fn main() {}
